# blackcurrant

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: generate-release.yml  github-actions.yml
migrations/: V1__key_catalogue.sql  V2__game_catalogue.sql  V3__item_catalogue.sql  V4__key_records.sql  V5__parcel_records.sql  V6__game_records.sql  V7__item_records.sql
src/: app.rs  main.rs  modals.rs  panels.rs  records.rs
src/modal/: alert.rs  exit.rs  game_entry.rs  game_sign.rs  item_entry.rs  item_sign.rs  key_sign.rs  mod.rs  sign_in.rs
src/modals/: about_modal.rs  backup_modal.rs  confirmation_modal.rs  export_modal.rs  game_entry_modal.rs  game_sign_modal.rs  item_entry_modal.rs  item_sign_modal.rs  key_entry_modal.rs  key_sign_modal.rs  mod.rs  parcel_sign_modal.rs  settings_modal.rs  sign_in_modal.rs  summary_modal.rs
src/panel/: game.rs  item.rs  key.rs  mod.rs  parcel.rs
src/panels/: game_panel.rs  item_panel.rs  key_panel.rs  mod.rs  parcel_panel.rs
src/records/: game_storage.rs  game_type_storage.rs  item_storage.rs  item_type_storage.rs  key_storage.rs  key_type_storage.rs  mod.rs  models.rs  parcel_storage.rs  student_info.rs
