[package]
name = "blackcurrant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
dirs = "5.0.1"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
err-derive = "0.3.1"
rfd = "0.11.3"
sqlite = "0.30.4"
strum = { version = "0.24.1", features = ["derive"] }
