[package]
name = "blackcurrant"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
confy = "0.5"
csv = "1.2"
dirs = "5.0"
eframe = "0.23"
egui = "0.23"
egui_extras = { version = "0.23", features = ["all_loaders"] }
env_logger = "0.10"
image = "0.24"
itertools = "0.11"
log = "0.4"
refinery = { version = "0.8", features = ["rusqlite"] }
rfd = "0.12"
rusqlite = { version = "0.29", features = ["bundled", "backup"] }
serde = "1.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.29", features = ["full"] }

[build-dependencies]
winres = "0.1"
